--- a/rnkr-cluster/.classpath
+++ b/rnkr-cluster/.classpath
@@ -4,19 +4,19 @@
   <classpathentry output="target" kind="src" path="src/test/scala"/>
   <classpathentry output="target" kind="src" path="src/test/resources"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.7.7.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.7.7.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/jars/grizzled-slf4j_2.11-1.0.2.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-cluster_2.11/jars/akka-cluster_2.11-2.3.8.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-remote_2.11/jars/akka-remote_2.11-2.3.8.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.8.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe/config/bundles/config-1.2.1.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/io.netty/netty/bundles/netty-3.8.0.Final.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.google.protobuf/protobuf-java/bundles/protobuf-java-2.5.0.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.uncommons.maths/uncommons-maths/jars/uncommons-maths-1.2.2a.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.1.2.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.1.2.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/jars/scalatest_2.11-2.1.3.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.7.7.jar" sourcepath="IVY_HOME/cache/org.slf4j/slf4j-api/srcs/slf4j-api-1.7.7-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.7.7.jar" sourcepath="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/srcs/jcl-over-slf4j-1.7.7-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/jars/grizzled-slf4j_2.11-1.0.2.jar" sourcepath="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/srcs/grizzled-slf4j_2.11-1.0.2-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-cluster_2.11/jars/akka-cluster_2.11-2.3.8.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-cluster_2.11/srcs/akka-cluster_2.11-2.3.8-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-remote_2.11/jars/akka-remote_2.11-2.3.8.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-remote_2.11/srcs/akka-remote_2.11-2.3.8-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.8.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/srcs/akka-actor_2.11-2.3.8-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe/config/bundles/config-1.2.1.jar" sourcepath="IVY_HOME/cache/com.typesafe/config/srcs/config-1.2.1-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/io.netty/netty/bundles/netty-3.8.0.Final.jar" sourcepath="IVY_HOME/cache/io.netty/netty/srcs/netty-3.8.0.Final-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.google.protobuf/protobuf-java/bundles/protobuf-java-2.5.0.jar" sourcepath="IVY_HOME/cache/com.google.protobuf/protobuf-java/srcs/protobuf-java-2.5.0-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.uncommons.maths/uncommons-maths/jars/uncommons-maths-1.2.2a.jar" sourcepath="IVY_HOME/cache/org.uncommons.maths/uncommons-maths/srcs/uncommons-maths-1.2.2a-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.1.2.jar" sourcepath="IVY_HOME/cache/ch.qos.logback/logback-classic/srcs/logback-classic-1.1.2-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.1.2.jar" sourcepath="IVY_HOME/cache/ch.qos.logback/logback-core/srcs/logback-core-1.1.2-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/jars/scalatest_2.11-2.1.3.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.1.3-sources.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
