--- a/rnkr-app/.classpath
+++ b/rnkr-app/.classpath
@@ -8,24 +8,27 @@
   <classpathentry kind="src" path="/rnkr-cluster" exported="true" combineaccessrules="false"/>
   <classpathentry kind="src" path="/rnkr-frontend" exported="true" combineaccessrules="false"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.7.7.jar" sourcepath="IVY_HOME/cache/org.slf4j/slf4j-api/srcs/slf4j-api-1.7.7-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.7.7.jar" sourcepath="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/srcs/jcl-over-slf4j-1.7.7-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/jars/grizzled-slf4j_2.11-1.0.2.jar" sourcepath="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/srcs/grizzled-slf4j_2.11-1.0.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scalaz/scalaz-core_2.11/bundles/scalaz-core_2.11-7.1.1.jar" sourcepath="IVY_HOME/cache/org.scalaz/scalaz-core_2.11/srcs/scalaz-core_2.11-7.1.1-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-parser-combinators_2.11/bundles/scala-parser-combinators_2.11-1.0.2.jar" sourcepath="IVY_HOME/cache/org.scala-lang.modules/scala-parser-combinators_2.11/srcs/scala-parser-combinators_2.11-1.0.2-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe/config/bundles/config-1.2.1.jar" sourcepath="IVY_HOME/cache/com.typesafe/config/srcs/config-1.2.1-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.8.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/srcs/akka-actor_2.11-2.3.8-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-slf4j_2.11/jars/akka-slf4j_2.11-2.3.8.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-slf4j_2.11/srcs/akka-slf4j_2.11-2.3.8-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.4-M3.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/srcs/akka-actor_2.11-2.4-M3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe/config/bundles/config-1.3.0.jar" sourcepath="IVY_HOME/cache/com.typesafe/config/srcs/config-1.3.0-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-slf4j_2.11/jars/akka-slf4j_2.11-2.4-M3.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-slf4j_2.11/srcs/akka-slf4j_2.11-2.4-M3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.7.12.jar" sourcepath="IVY_HOME/cache/org.slf4j/slf4j-api/srcs/slf4j-api-1.7.12-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.datastax.cassandra/cassandra-driver-core/bundles/cassandra-driver-core-2.1.4.jar" sourcepath="IVY_HOME/cache/com.datastax.cassandra/cassandra-driver-core/srcs/cassandra-driver-core-2.1.4-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.google.guava/guava/bundles/guava-14.0.1.jar" sourcepath="IVY_HOME/cache/com.google.guava/guava/srcs/guava-14.0.1-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.codahale.metrics/metrics-core/bundles/metrics-core-3.0.2.jar" sourcepath="IVY_HOME/cache/com.codahale.metrics/metrics-core/srcs/metrics-core-3.0.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/net.jpountz.lz4/lz4/jars/lz4-1.3.0.jar" sourcepath="IVY_HOME/cache/net.jpountz.lz4/lz4/srcs/lz4-1.3.0-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.xerial.snappy/snappy-java/bundles/snappy-java-1.1.1.6.jar" sourcepath="IVY_HOME/cache/org.xerial.snappy/snappy-java/srcs/snappy-java-1.1.1.6-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-cluster_2.11/jars/akka-cluster_2.11-2.3.8.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-cluster_2.11/srcs/akka-cluster_2.11-2.3.8-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-remote_2.11/jars/akka-remote_2.11-2.3.8.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-remote_2.11/srcs/akka-remote_2.11-2.3.8-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/io.netty/netty/bundles/netty-3.8.0.Final.jar" sourcepath="IVY_HOME/cache/io.netty/netty/srcs/netty-3.8.0.Final-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-cluster_2.11/jars/akka-cluster_2.11-2.4-M3.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-cluster_2.11/srcs/akka-cluster_2.11-2.4-M3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-remote_2.11/jars/akka-remote_2.11-2.4-M3.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-remote_2.11/srcs/akka-remote_2.11-2.4-M3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/io.netty/netty/bundles/netty-3.10.3.Final.jar" sourcepath="IVY_HOME/cache/io.netty/netty/srcs/netty-3.10.3.Final-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.google.protobuf/protobuf-java/bundles/protobuf-java-2.5.0.jar" sourcepath="IVY_HOME/cache/com.google.protobuf/protobuf-java/srcs/protobuf-java-2.5.0-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.uncommons.maths/uncommons-maths/jars/uncommons-maths-1.2.2a.jar" sourcepath="IVY_HOME/cache/org.uncommons.maths/uncommons-maths/srcs/uncommons-maths-1.2.2a-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-cluster-sharding_2.11/jars/akka-cluster-sharding_2.11-2.4-M3.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-cluster-sharding_2.11/srcs/akka-cluster-sharding_2.11-2.4-M3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-persistence_2.11/jars/akka-persistence_2.11-2.4-M3.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-persistence_2.11/srcs/akka-persistence_2.11-2.4-M3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-cluster-tools_2.11/jars/akka-cluster-tools_2.11-2.4-M3.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-cluster-tools_2.11/srcs/akka-cluster-tools_2.11-2.4-M3-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-can_2.11/bundles/spray-can_2.11-1.3.2.jar" sourcepath="IVY_HOME/cache/io.spray/spray-can_2.11/srcs/spray-can_2.11-1.3.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-io_2.11/bundles/spray-io_2.11-1.3.2.jar" sourcepath="IVY_HOME/cache/io.spray/spray-io_2.11/srcs/spray-io_2.11-1.3.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-util_2.11/bundles/spray-util_2.11-1.3.2.jar" sourcepath="IVY_HOME/cache/io.spray/spray-util_2.11/srcs/spray-util_2.11-1.3.2-sources.jar"/>
